Regression: UV faces not selecting correctly #104033

Closed
opened 2023-01-20 20:15:02 +01:00 by Ian Jones · 21 comments

System Information
Operating system: macOS-13.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Max Apple 4.1 Metal - 83

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-16 11:23, hash: 5320372c34
Worked: 3.4
Caused by 6c774feba2

Short description of error
Selecting UVs in face mode with the box selection shows the 'face dot' not selected but the edges are. The selected area can be moved but splitting doesn't work and causes the selection to deselect.
Individually selecting sections works OK.

Exact steps for others to reproduce the error

  • Open default scene and switch to UV editing workspace
  • Change to Face select mode
  • Use box/circle/lasso select for selecting faces (notice only vertices gets selected but not face center)
    UV Select.mov
**System Information** Operating system: macOS-13.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Max Apple 4.1 Metal - 83 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-16 11:23, hash: `5320372c34` Worked: 3.4 Caused by 6c774feba2 **Short description of error** Selecting UVs in face mode with the box selection shows the 'face dot' not selected but the edges are. The selected area can be moved but splitting doesn't work and causes the selection to deselect. Individually selecting sections works OK. **Exact steps for others to reproduce the error** - Open default scene and switch to UV editing workspace - Change to Face select mode - Use box/circle/lasso select for selecting faces (notice only vertices gets selected but not face center) [UV Select.mov](https://archive.blender.org/developer/F14180256/UV_Select.mov)
Author

Added subscriber: @Macwelshman

Added subscriber: @Macwelshman

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I cannot reproduce this with either the latest stable or current development versions of Blender.

This is the .blend file I used to test:
uv_select.blend

Please try the latest daily build: https://builder.blender.org/download/

Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue.

If the problem persists, please give us more clear instructions on how to reproduce it from scratch.

I cannot reproduce this with either the latest stable or current development versions of Blender. This is the .blend file I used to test: [uv_select.blend](https://archive.blender.org/developer/F14180095/uv_select.blend) Please try the latest daily build: https://builder.blender.org/download/ Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue. If the problem persists, please give us more clear instructions on how to reproduce it from scratch.
Author

This is still happening with the latest build and your test file. Screen capture attached.UV Select.mov

This is still happening with the latest build and your test file. Screen capture attached.[UV Select.mov](https://archive.blender.org/developer/F14180256/UV_Select.mov)

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscriber: @fuvesib

Added subscriber: @fuvesib

I was able to reproduce the behaviour shown in the screen capture with the uv_select.blend file.

Blender Versions
Broken version: 3.5.0 Alpha, branch: master, commit date: 2023-01-20 23:41, hash: 68625431d5
Worked version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: 55485cb379

System Information
Operating system: macOS-13.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 83

I was able to reproduce the behaviour shown in the screen capture with the uv_select.blend file. **Blender Versions** Broken version: 3.5.0 Alpha, branch: master, commit date: 2023-01-20 23:41, hash: `68625431d5` Worked version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `55485cb379` **System Information** Operating system: macOS-13.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Apple 4.1 Metal - 83

Added subscriber: @Michael-Parkin-White-Apple

Added subscriber: @Michael-Parkin-White-Apple
Michael Parkin-White self-assigned this 2023-01-22 16:07:06 +01:00

Will investigate if this is caused by Metal or any of the flag format comparison changes on the overlay UV shaders.

Will investigate if this is caused by Metal or any of the flag format comparison changes on the overlay UV shaders.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm on windows. Will bisect.

I can confirm on windows. Will bisect.
Contributor

Added subscriber: @Gilberto.R

Added subscriber: @Gilberto.R
Pratik Borhade changed title from UV faces not selecting correctly. to Regression: UV faces not selecting correctly 2023-01-23 06:23:59 +01:00
Member

Added subscriber: @Baardaap

Added subscriber: @Baardaap
Member

Selection broke after 6c774feba2
@Baardaap ^

Selection broke after 6c774feba2 @Baardaap ^

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Is this issue isolated to macOS/Metal ? (checking nobody managed to redo on Linux/Windows)

Is this issue isolated to macOS/Metal ? (checking nobody managed to redo on Linux/Windows)
Member

@ideasman42 , no. I can redo this on Windows machine.

Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78```
@ideasman42 , no. [I can redo this on Windows machine](https://developer.blender.org/T104033#1478321:~:text=I%20can%20confirm%20on%20windows). ```**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78```

This issue was referenced by f5c081dafc

This issue was referenced by f5c081dafc79041dab7985a66f4546a30149121b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104033
No description provided.