Fix T104033: UV edges not selecting when selecting faces

Regression in [0] replaced edge with vertex selection.

[0]: 6c774feba2c9a1eb5834646f597a0f2c63177914